# loglens

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  compress.rs  filter.rs  generate.rs  main.rs  models.rs  output.rs
src/parser/: access_parser.rs  iso_parser.rs  json_parser.rs  logfmt_parser.rs  mod.rs  plain_parser.rs  rfc3339_parser.rs  syslog_parser.rs
tests/: integration_test.rs
