[package]
name = "loglens"
version = "0.1.0"
edition = "2021"
description = "A fast, structured log analyzer CLI tool for parsing, analyzing, and understanding log files"
license = "MIT"
authors = ["Edgar Ortega Ramirez"]
repository = "https://github.com/EdgarOrtegaRamirez/loglens"
keywords = ["log", "analyzer", "cli", "parser", "structured-logs"]
categories = ["command-line-utilities", "parser-implementations", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
colored = "2"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
